testdata/EtaX/EtaX.meth/EtaX.meth.01.check
// src:   val t3Sam0S: Sam0S = meth
// 2.13-base error
target/testdata/EtaX/EtaX.meth.01.scala:11: error: type mismatch;
 found   : String
 required: p01.Sam0S
  val t3Sam0S: Sam0S = meth
                       ^
1 error

// 2.13-head error <no change>
// 2.13-new  error <no change>
// 3.0-old   error
-- [E100] Syntax Migration Warning: target/testdata/EtaX/EtaX.meth.01.scala:11:23 
11 |  val t3Sam0S: Sam0S = meth
   |                       ^^^^
   |                       method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

-- [E007] Type Mismatch Error: target/testdata/EtaX/EtaX.meth.01.scala:11:23 ---
11 |  val t3Sam0S: Sam0S = meth
   |                       ^^^^
   |                       Found:    String
   |                       Required: p01.Sam0S
1 warning found
1 error found

// 3.0       error
-- [E100] Syntax Error: target/testdata/EtaX/EtaX.meth.01.scala:11:23 ----------
11 |  val t3Sam0S: Sam0S = meth
   |                       ^^^^
   |                       method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found

// 3.1-migr  error <no change>
// 3.1       error <no change>

error error error error error error error
